--- a/css/main.scss
+++ b/css/main.scss
@@ -501,7 +501,7 @@ body {
         position: relative;
     }
     .swiper-container {
-        width: 1100px;
+        width: 1060px;
         height: auto;
     }
     .swiper-wrapper {
@@ -615,11 +615,12 @@ body {
     }
 }
 .comment {
+    padding-bottom: 76px;
     .title {
         text-align: center;
     }
     .swiper-container {
-        width: 1000px;
+        width: 1060px;
         height: 500px;
         padding: 30px 0;
     }
@@ -689,13 +690,62 @@ body {
     }
 }
 .tarif {
-    &__wrap {}
-    &__el {}
+    padding-top: 0;
+    .title {
+        text-align: center;
+    }
+    &__wrap {
+        display: flex;
+        gap: 20px;
+        width: 1060px;
+        margin: 0 auto;
+    }
+    &__el {
+        width: calc(50%);
+        box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.01);
+        background: #f7f7f7;
+        padding: 52px 45px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        position: relative;
+    }
     &__info {}
-    &__name {}
-    &__desc {}
-    &__cost {}
-    &__label {}
+    &__name {
+        margin-bottom: 34px;
+        font-family: var(--second-family);
+        font-weight: 700;
+        font-size: 34px;
+        text-transform: uppercase;
+    }
+    &__desc {
+        margin-bottom: 96px;
+    }
+    &__cost {
+        font-family: var(--second-family);
+        font-weight: 700;
+        font-size: 56px;
+        text-transform: uppercase;
+        color: #920606;
+    }
+    &__label {
+        position: absolute;
+        width: 130px;
+        height: 130px;
+        background: #920606;
+        border-radius: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: var(--second-family);
+        font-weight: 600;
+        font-size: 20px;
+        text-transform: uppercase;
+        color: #fff;
+        right: -60px;
+        top: -60px;
+    }
 }
 .faq {
 }
