--- a/css/main.css
+++ b/css/main.css
@@ -2546,6 +2546,9 @@ body {
 .comment {
   padding-bottom: 76px;
 }
+.comment__wrap {
+  position: relative;
+}
 .comment .title {
   text-align: center;
 }
@@ -2553,6 +2556,39 @@ body {
   width: 1060px;
   height: 500px;
   padding: 30px 0;
+}
+.comment .swiper-button {
+  background: none;
+  display: flex;
+  align-items: center;
+}
+.comment .swiper-button svg {
+  width: 40px;
+  height: 40px;
+  fill: transparent;
+  stroke: #2c3336;
+  stroke-width: 3;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  transition: all 0.15s ease;
+  transform: var(--f-button-transform);
+  filter: var(--f-button-svg-filter);
+  pointer-events: none;
+  opacity: 0.6;
+}
+.comment .swiper-button:hover svg {
+  stroke: #000;
+  opacity: 1;
+}
+.comment .swiper-button-prev {
+  transform: rotate(180deg);
+  left: 0;
+}
+.comment .swiper-button-next {
+  right: 0;
+}
+.comment .swiper-button-disabled {
+  opacity: 0;
 }
 .comment .swiper-slide {
   background: #deb3b3;
