--- a/css/_query.scss
+++ b/css/_query.scss
@@ -1,7 +1,10 @@
 
 
-@media only screen and (max-width: 1500px) {
-
+@media only screen and (max-width: 1280px) {
+    .container {
+        width: 100%;
+        padding: 0 40px;
+    }
 }
 
 
