--- a/css/main.css
+++ b/css/main.css
@@ -454,13 +454,9 @@ body {
 }
 
 .about {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  display: grid;
+  grid-template: 1fr/1fr 1fr;
   gap: 70px;
-}
-.about__desc {
-  flex: 1 0 540px;
 }
 .about__text {
   font-family: var(--second-family);
@@ -520,6 +516,8 @@ body {
 }
 .online__desc {
   flex: 0 0 680px;
+  position: relative;
+  z-index: 100;
 }
 .online__list {
   display: grid;
@@ -627,6 +625,8 @@ body {
 }
 .get__desc {
   flex: 0 0 480px;
+  position: relative;
+  z-index: 100;
 }
 .get__list li {
   margin-bottom: 30px;
@@ -771,6 +771,9 @@ body {
   text-align: center;
   position: relative;
 }
+.tarif__info {
+  flex: 1 0 auto;
+}
 .tarif__name {
   margin-bottom: 34px;
   font-family: var(--second-family);
@@ -864,5 +867,41 @@ body {
   .container {
     width: 100%;
     padding: 0 40px;
+  }
+  .comment .swiper-container {
+    width: 100%;
+    height: 550px;
+  }
+  .tarif__wrap {
+    width: 100%;
+  }
+  .tarif__label {
+    right: -30px;
+    top: -30px;
+    width: 80px;
+    height: 80px;
+    font-weight: 500;
+    font-size: 13px;
+  }
+  .client .swiper-container {
+    width: 100%;
+  }
+  .client .swiper-button-prev {
+    left: -30px;
+  }
+  .client .swiper-button-next {
+    right: -30px;
+  }
+  .comment .swiper-button-prev {
+    left: -30px;
+  }
+  .comment .swiper-button-next {
+    right: -30px;
+  }
+  .get__pic {
+    opacity: 0.5;
+  }
+  .online__pic {
+    opacity: 0.5;
   }
 }/*# sourceMappingURL=main.css.map */
