--- a/css/main.scss
+++ b/css/main.scss
@@ -310,7 +310,7 @@ body {
     height: 900px;
     justify-content: space-between;
     gap: 40px;
-    background: url(../img/intro.jpg) no-repeat center top / cover;
+    background: #F7F7F7 url(../img/intro.png) no-repeat center top / cover;
     align-items: stretch;
     padding: 0;
     &__desc {
