--- a/css/main.css
+++ b/css/main.css
@@ -398,7 +398,7 @@ body {
   height: 900px;
   justify-content: space-between;
   gap: 40px;
-  background: url(../img/intro.jpg) no-repeat center top/cover;
+  background: #F7F7F7 url(../img/intro.png) no-repeat center top/cover;
   align-items: stretch;
   padding: 0;
 }
@@ -903,5 +903,48 @@ body {
   }
   .online__pic {
     opacity: 0.5;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .container {
+    padding: 0 20px;
+  }
+  .intro {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding: 70px 0 400px;
+    height: auto;
+    justify-content: flex-start;
+    gap: 20px;
+    background: #F7F7F7;
+  }
+  .intro .container {
+    display: flex;
+    justify-content: center;
+  }
+  .intro__desc {
+    align-items: center;
+    text-align: center;
+  }
+  .intro .container::after {
+    left: -50%;
+    top: auto;
+    bottom: -120px;
+    height: 400%;
+    width: 200%;
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 50%;
+  }
+  .intro .container:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 350px;
+    background: url(../img/intro_min.png) no-repeat center center/contain;
+    bottom: -400px;
+    left: 0;
+    z-index: 100;
   }
 }/*# sourceMappingURL=main.css.map */
