--- a/css/_query.scss
+++ b/css/_query.scss
@@ -49,7 +49,7 @@
         position: relative;
         display: flex;
         flex-direction: column;
-        padding: 70px 0 400px;
+        padding: 70px 0 400px !important;
         height: auto;
         justify-content: flex-start;
         gap: 20px;
@@ -85,22 +85,74 @@
         left: 0;
         z-index: 100;
     }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    .subtitle{
+        font-size: 24px;
+        margin-bottom: 15px;
+    }
+    .intro__desc p {
+        font-size: 14px;
+        margin-bottom: 26px;
+    }
+    .btn{
+        height: 56px;
+        padding: 0 16px;
+        font-size: 16px;
+    }
+    .article {
+        padding: 56px 0;
+    }
+    .about__text {
+        font-size: 16px;
+        margin-bottom: 22px;
+    }
+    .about__list li{
+        font-size: 14px;
+        line-height: 143%;
+    }
+    .about {
+        display: grid;
+        grid-template: auto 300px / 1fr;
+        gap: 44px;
+    }
+    .about__pic{
+        width: auto;
+        height: 300px;
+        margin: 0 auto;
+    }
+    .online .container {
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        position: relative;
+        flex-direction: column;
+        padding-bottom: 320px;
+    }
+    .online__pic{
+        opacity: 1;
+        height: 350px;
+        bottom: -56px;
+        left: calc(50% - 120px);
+    }
+    .online__desc {
+        flex: 0 0 auto;
+    }
+    .online__list {
+        display: grid;
+        grid-template: auto / auto;
+        gap: 24px;
+    }
+    .online__list li {
+        padding-top: 42px;
+        background: url(../img/star.svg) no-repeat left top  / 26px 26px;
+        font-size: 14px;
+    }
+    .online .subtitle {
+        margin-bottom: 38px;
+    }
+    .title {
+        font-size: 24px;
+        margin-bottom: 38px;
+    }
 
 }
 
