--- a/css/_query.scss
+++ b/css/_query.scss
@@ -20,6 +20,7 @@
     }
     .client .swiper-container {
         width: 100%;
+        //overflow: visible;
     }
     .client .swiper-button-prev {
         left: -30px;
@@ -154,9 +155,18 @@
         margin-bottom: 38px;
     }
     .client__wrap{
-        margin: 0 -80px 0 0;
-        padding: 0 60px;
+        //margin: 0 -80px 0 0;
+        padding: 0 20px;
+        .swiper-button{
+            display: none;
+        }
+        .swiper-slide{
+            img{
+                width: 100%;
+            }
+        }
     }
+    
     .client .swiper-button-prev {
         left: 10px;
     }
@@ -314,7 +324,10 @@
         display: flex;
         gap: 14px;
     }
-
+    .client .swiper-container {
+        width: 100%;
+        overflow: visible;
+    }
 
 
 
