--- a/css/_query.scss
+++ b/css/_query.scss
@@ -49,6 +49,18 @@
 }
 
 @media only screen and (max-width: 1024px) {
+    .modal {
+        left: 50%;
+        width: 90%;
+        border-radius: 30px;
+    }
+    .modal__desc {
+        font-size: 37px;
+    }
+    .modal .formwrap label:not(.btn) .input {
+        height: 60px;
+    }
+
     .container {
         padding: 0 20px;
     }
@@ -353,6 +365,20 @@
     .comment .swiper-container {
         width: 100%;
         height: 500px;
+    }
+    .modal__desc {
+        font-size: 20px;
+    }
+    .modal .formwrap {
+        padding: 86px 20px 40px;
+    }
+    .modal .formwrap label:not(.btn) .input {
+        height: 48px;
+        font-size: 18px;
+    }
+    .modal__close {
+        top: 27px;
+        right: 28px;    
     }
 }
 @media only screen and (max-width: 600px) {
