--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,10 @@ table th, table td {
   --third-family: "Montserrat", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -863,6 +867,152 @@ body {
   transform: scale(1.1);
 }
 
+.modal-bg {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  -webkit-backdrop-filter: blur(30px);
+  backdrop-filter: blur(60px);
+  transition: all 1s ease-in-out;
+  opacity: 0;
+  visibility: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
+  z-index: 100;
+}
+
+.modal-bg.vis {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal-wrap {
+  position: fixed;
+  opacity: 0;
+  visibility: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
+  z-index: 1000;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.modal-wrap.vis {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal {
+  width: 780px;
+  background: #fff;
+  margin: 40px auto 40px;
+  border-radius: 75px;
+  box-shadow: 0px 0px 69px 5px #fff, 0px 1px 13px -9px #000 inset;
+  display: none;
+}
+.modal.vis {
+  display: block;
+}
+.modal__close {
+  width: 30px;
+  height: 30px;
+  border-radius: 16px;
+  position: absolute;
+  top: 47px;
+  right: 58px;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal__close:hover {
+  transform: rotate(180deg);
+}
+.modal__close svg {
+  width: 24px;
+  height: 24px;
+}
+.modal__body {
+  padding: 120px 68px;
+  position: relative;
+}
+.modal__desc {
+  color: #272727;
+  text-align: center;
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 134%; /* 64.32px */
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 48px;
+}
+.modal__desc_confirm {
+  margin-bottom: 0;
+}
+.modal .formwrap label:not(.btn) {
+  display: block;
+  margin-bottom: 34px;
+}
+.modal .formwrap label:not(.btn) span {
+  color: #272727;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: normal;
+  display: block;
+  margin-bottom: 14px;
+}
+.modal .formwrap label:not(.btn) span small {
+  font-size: 100%;
+  color: #929292;
+}
+.modal .formwrap label:not(.btn) .input {
+  border-radius: 75px;
+  border: 1px solid #272727;
+  background: #FFF;
+  height: 74px;
+  padding: 0 40px;
+  width: 100%;
+  outline: none;
+  font-size: 20px;
+}
+.modal .formwrap label:not(.btn) .input.error {
+  border-color: #e80d0d;
+}
+.modal .formwrap label:not(.btn) .input.error + span.error__text {
+  display: block;
+  color: #e80d0d;
+}
+.modal .formwrap label:not(.btn) .input.error + span.error__text small {
+  color: #e80d0d;
+}
+.modal .formwrap label:not(.btn) .error__text {
+  display: none;
+}
+.modal .formwrap .btn {
+  width: 100%;
+  border: 0;
+  padding: 0;
+}
+
+.modal[data-attr=modal_confirm] {
+  display: none;
+}
+.modal[data-attr=modal_confirm].vis {
+  display: block;
+}
+
+.oh {
+  overflow: hidden !important;
+}
+
+body.oh {
+  padding-right: 17px;
+}
+
 @media only screen and (max-width: 1280px) {
   .intro {
     background: #F7F7F7 url(../img/intro.png) no-repeat center top/cover;
@@ -909,6 +1059,17 @@ body {
   }
 }
 @media only screen and (max-width: 1024px) {
+  .modal {
+    left: 50%;
+    width: 90%;
+    border-radius: 30px;
+  }
+  .modal__desc {
+    font-size: 37px;
+  }
+  .modal .formwrap label:not(.btn) .input {
+    height: 60px;
+  }
   .container {
     padding: 0 20px;
   }
@@ -1194,6 +1355,20 @@ body {
   .comment .swiper-container {
     width: 100%;
     height: 500px;
+  }
+  .modal__desc {
+    font-size: 20px;
+  }
+  .modal .formwrap {
+    padding: 86px 20px 40px;
+  }
+  .modal .formwrap label:not(.btn) .input {
+    height: 48px;
+    font-size: 18px;
+  }
+  .modal__close {
+    top: 27px;
+    right: 28px;
   }
 }
 @media only screen and (max-width: 600px) {
