--- a/css/main.css
+++ b/css/main.css
@@ -794,6 +794,7 @@ body {
   font-size: 56px;
   text-transform: uppercase;
   color: #920606;
+  margin-bottom: 20px;
 }
 .tarif__label {
   position: absolute;
@@ -811,6 +812,10 @@ body {
   color: #fff;
   right: -60px;
   top: -60px;
+}
+
+.btn_kauf {
+  padding: 0 50px;
 }
 
 .contact {
